controllers/victoriametrics/vmalert/assets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-monitoring-vmalert
  labels:
    platform.monitoring.app: vmalert
    app.kubernetes.io/component: victoriametrics
    app.kubernetes.io/part-of: monitoring
    app.kubernetes.io/managed-by: monitoring-operator
  annotations: {}
spec:
  tls: ~
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmalert-k8s
                port:
                  number: 8080
